# recall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: add.rs  browse.rs  card.rs  cli.yml  decks.rs  file.rs  init.rs  learn.rs  lib.rs  main.rs  new.rs  prompt.rs  qa.rs  scheduler.rs
