[package]
name = "recall"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
readme = "README.md"
description = "A flashcard CLI."
homepage = "https://github.com/mblode/recall"
repository = "https://github.com/mblode/recall"
license = "MIT"
keywords = ["cli", "flashcard", "anki", "recall"]


[dependencies]
clap = {version = "2.33", features = ["yaml"]}
chrono = "0.4.6"
failure = "0.1.5"
exitfailure = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.39"
