[package]
name = "recall"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
readme = "README.md"
description = "A flashcard CLI."
homepage = "https://github.com/mblode/recall"
repository = "https://github.com/mblode/recall"
license = "MIT"
keywords = ["cli", "flashcard", "anki", "recall"]

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
rand = "0.6.5"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0.0"
fnv = "1.0.6"
dirs = "1.0.5"
regex = "1"
serde = "1.0.90"
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11"
